Fixing NoClassDefFoundError...